# djkids-reservation

./: .env.example  .env.render.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.md  requirements.txt
app/: __init__.py  config.py  db.py  health_server.py  logging_config.py  main.py  models.py  scheduler.py
app/bot/: handlers.py  keyboards.py  messages.py
app/djkids/: __init__.py  fetcher.py  json_parser.py  parser.py  status.py  types.py
app/services/: access_control.py  monitor_service.py  notification_service.py  watch_service.py
docs/: decisions.md
tests/: conftest.py  test_access_control.py  test_json_parser.py  test_notification_rules.py  test_parser.py  test_status.py  test_watch_service.py
tests/fixtures/: djkids_calendar_available.html  djkids_calendar_closed.html
